#27794077 update createuser commands to use '-h local'

--- a/README.mkd
+++ b/README.mkd
@@ -25,10 +25,10 @@ You can see a running version of the application at
     brew install postgis
 
     # Create regular database user named `preparedly`, empty password
-    createuser --pwprompt preparedly 
+    createuser -h localhost --pwprompt preparedly 
 
     # Create superuser database user named `cfa`, empty password
-    createuser --pwprompt --superuser cfa 
+    createuser -h localhost --pwprompt --superuser cfa 
 
     git clone git://github.com/codeforamerica/prepared.ly.git
     cd prepared.ly 
